<resources>
    <string name="app_name">EasyFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="categories">Categories</string>
    <string name="over_popular_item">Over popular Item</string>
    <string name="what_would_you_like_to_eat">What would you like to eat?</string>
    <string name="category_beef">Category : Beef</string>
    <string name="area_palestine">Area : Palestine</string>
    <string name="instruction">- Instruction :</string>
    <string name="read_more">Read more ...</string>
    <string name="search_meals">Search Meals</string>
</resources>