<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.bottomsheet.MealBottomSheetFragment"
    android:padding="@dimen/_5sdp"
    android:id="@+id/bottom_sheet">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_meal"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@color/accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        android:layout_margin="@dimen/_5sdp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/img_meal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_5sdp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_category"
            android:text="@string/category_beef"
            android:drawableTint="@color/g_black"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_area"
            android:text="@string/area_palestine"
            android:drawableTint="@color/g_black"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_meal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/linear_layout"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        android:text="Meal Name"
        android:fontFamily="@font/myfont"
        android:textColor="@color/g_black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/linear_layout"
        app:layout_constraintTop_toBottomOf="@+id/tv_meal_name"
        android:text="@string/read_more"
        android:fontFamily="@font/myfont"
        android:textColor="@color/g_black"
        android:layout_marginTop="@dimen/_10sdp"/>


</androidx.constraintlayout.widget.ConstraintLayout>