<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:fillViewport="true">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/home_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/home"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textSize="@dimen/_25sdp"
                    android:fontFamily="@font/myfont"
                    android:textColor="@color/primary"
                    tools:ignore="RelativeOverlap" />
                <ImageView
                    android:id="@+id/img_home_search"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_search"
                    android:layout_alignParentEnd="true"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_what_would_you_like_to_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/what_would_you_like_to_eat"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/myfont"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/home_header"
                app:layout_constraintTop_toBottomOf="@+id/home_header"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_random_meal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                app:layout_constraintStart_toStartOf="@id/home_header"
                app:layout_constraintTop_toBottomOf="@+id/tv_what_would_you_like_to_eat"
                app:cardCornerRadius="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_20sdp">

                <ProgressBar
                    android:id="@+id/loadingBar"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_random_meal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_over_popular_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/over_popular_item"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/myfont"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/home_header"
                app:layout_constraintTop_toBottomOf="@id/card_random_meal"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_popular_item"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_over_popular_item" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/categories"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/myfont"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/rcv_popular_item"
                app:layout_constraintTop_toBottomOf="@id/rcv_popular_item"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_3sdp"
                android:paddingVertical="@dimen/_3sdp"
                android:paddingHorizontal="3dp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="@+id/tv_categories"
                app:layout_constraintTop_toBottomOf="@id/tv_categories">
                <androidx.recyclerview.widget.RecyclerView
                    android:overScrollMode="never"
                    android:id="@+id/rcv_categories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:scrollbars="none"/>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>